<?xml version="1.0"?>
<package format="3">
  <name>sensor_preprocessing_suite</name>
  <version>0.1.0</version>
  <description>Sensor preprocessing library for synchronized imu and lidar data handling.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
